name:                advent
version:             0.1.0.0
homepage:            https://github.com/wdavew/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              David Wilson
copyright:           2018 David Wilson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Day1, Day2, Day3, Day4, Day5
                     , Day6, Day7, Day8, Day9, Day10
                     , Day11, Day12, Day13, Day14
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       bytestring,
                       split
executable day1p1
  hs-source-dirs:      exe
  main-is:             Day1P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day1p2
  hs-source-dirs:      exe
  main-is:             Day1P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day2p1
  hs-source-dirs:      exe
  main-is:             Day2P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day2p2
  hs-source-dirs:      exe
  main-is:             Day2P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day3p1
  hs-source-dirs:      exe
  main-is:             Day3P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day3p2
  hs-source-dirs:      exe
  main-is:             Day3P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day4p1
  hs-source-dirs:      exe
  main-is:             Day4P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day4p2
  hs-source-dirs:      exe
  main-is:             Day4P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day5p1
  hs-source-dirs:      exe
  main-is:             Day5P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day5p2
  hs-source-dirs:      exe
  main-is:             Day5P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day6p1
  hs-source-dirs:      exe
  main-is:             Day6P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day6p2
  hs-source-dirs:      exe
  main-is:             Day6P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day7p1
  hs-source-dirs:      exe
  main-is:             Day7P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day7p2
  hs-source-dirs:      exe
  main-is:             Day7P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day8p1
  hs-source-dirs:      exe
  main-is:             Day8P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day8p2
  hs-source-dirs:      exe
  main-is:             Day8P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day9
  hs-source-dirs:      exe
  main-is:             Day9P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day10p1
  hs-source-dirs:      exe
  main-is:             Day10P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent,
                       gloss,
                       bytestring
executable day10p2
  hs-source-dirs:      exe
  main-is:             Day10P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent,
                       gloss,
                       bytestring
executable day11p1
  hs-source-dirs:      exe
  main-is:             Day11P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day11p2
  hs-source-dirs:      exe
  main-is:             Day11P2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
executable day14
  hs-source-dirs:      exe
  main-is:             Day14P1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       advent
